--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-emotion-typescript",
-  "version": "1.0.0",
-  "description": "Blog template for Gatsby.",
+  "name": "yopinoji.com",
+  "version": "3.0.0",
+  "description": "yopinoji.com",
   "keywords": [
     "gatsby",
     "typescript",
